--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,8 @@
-@import "./settings/variables";
-@import "./settings/mixins";
+@import './settings/variables';
+@import './settings/mixins';
 
-@import "./generic/reset";
+@import './generic/reset';
 
-@import "./elements/base";
-@import "./elements/startPage";
+@import './elements/base';
+@import './elements/startPage';
+@import './elements/mainPage';
