--- a/src/scss/settings/_variables.scss
+++ b/src/scss/settings/_variables.scss
@@ -1,5 +1,7 @@
 
 $primaryColor: #b797ce;
+$primaryContainer: #3F2651;
+$OnPrimaryContainer: #9B6FBB;
 $secondaryColor: #aece97;
 $teriaryColor: #4b7a8c;
 $surface: #9f9893;
