--- a/src/scss/elements/_base.scss
+++ b/src/scss/elements/_base.scss
@@ -1,7 +1,11 @@
-@import "../settings/variables";
+@import '../settings/variables';
 
 body {
   height: 100vh;
   width: 100vw;
   font-family: $font;
+}
+
+a {
+  text-decoration: none;
 }
