--- a/src/scss/elements/_levels.scss
+++ b/src/scss/elements/_levels.scss
@@ -1,29 +1,22 @@
 @import '../settings/variables';
 @import '../settings/mixins';
 
-.categories {
+.levels {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 1rem;
+
   &__title {
-    text-align: center;
-    margin-top: 1rem;
     margin-bottom: 1rem;
     font-size: 2.2rem;
     color: $primaryColor;
-    @include tablet {
-      margin-top: 3rem;
-      margin-bottom: 3rem;
-    }
   }
 
-  &__all {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    max-width: 57.5rem;
+  &__choose {
     @include tablet {
-      flex-direction: row;
-      flex-wrap: wrap;
-      width: 80vw;
-      margin-left: 5rem;
+      display: flex;
+      margin-top: 3rem;
     }
 
     &--btn {
@@ -31,16 +24,15 @@
       justify-content: center;
       background-color: transparent;
       border: none;
-      height: 12rem;
+      height: 10rem;
       margin-bottom: 0.5rem;
-
       p {
         margin-top: 1rem;
         color: white;
         font-family: $font;
         font-size: 1.2rem;
         position: absolute;
-        height: 11rem;
+        height: 9rem;
       }
 
       img {
@@ -50,15 +42,9 @@
   }
 }
 
-.arrow-position {
+.container {
+  width: 100%;
   display: flex;
-  justify-content: center;
-  @include tablet {
-    justify-content: space-evenly;
-    align-items: center;
-  }
-}
-
-.selected {
-  opacity: 0.6;
+  align-items: center;
+  justify-content: space-around;
 }
