Started creating game view

--- a/src/scss/elements/_categories.scss
+++ b/src/scss/elements/_categories.scss
@@ -35,12 +35,13 @@
       margin-bottom: 0.5rem;
 
       p {
-        margin-top: 1rem;
+        padding-top: 1rem;
         color: white;
         font-family: $font;
         font-size: 1.2rem;
         position: absolute;
         height: 11rem;
+        width: 10.625rem;
       }
 
       img {
