--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,7 +4,9 @@
 @import './generic/reset';
 
 @import './elements/base';
+@import './elements/header';
 @import './elements/startPage';
 @import './elements/mainPage';
 @import './elements/categories';
 @import './elements/levels';
+@import './elements/startGame';
