--- a/src/scss/elements/_gamePlay.scss
+++ b/src/scss/elements/_gamePlay.scss
@@ -1,10 +1,45 @@
 @import '../settings/variables';
 @import '../settings/mixins';
 
-.visible {
-  display: block;
+.game-play {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  background-color: $teriaryColor;
+
+  &__question {
+    font-size: 1.5rem;
+    text-align: center;
+    margin-bottom: 3rem;
+    color: white;
+  }
+
+  &__answers {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    &--btn {
+      border: none;
+      background-color: $primaryColor;
+      width: 17rem;
+      margin-bottom: 1rem;
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+      border-radius: 2rem;
+      color: white;
+      font-family: $font;
+    }
+  }
 }
 
-.none {
-  display: none;
+.btn-question {
+  &--selected {
+    background-color: $containerColor;
+  }
 }
