--- a/src/scss/elements/_gamePlay.scss
+++ b/src/scss/elements/_gamePlay.scss
@@ -11,6 +11,13 @@
   padding-right: 1rem;
   background-color: $teriaryColor;
 
+  &--btnEnd {
+    background-color: transparent;
+    border: none;
+    color: red;
+    margin-bottom: 5rem;
+  }
+
   &__question {
     font-size: 1.5rem;
     text-align: center;
@@ -42,4 +49,8 @@
   &--selected {
     background-color: $containerColor;
   }
+}
+
+.MuiButtonBase-root.MuiPaginationItem-root {
+  color: white;
 }
