--- a/src/scss/elements/_gamePlay.scss
+++ b/src/scss/elements/_gamePlay.scss
@@ -11,11 +11,23 @@
   padding-right: 1rem;
   background-color: $teriaryColor;
 
-  &--btnEnd {
-    background-color: transparent;
-    border: none;
-    color: red;
+  &__action {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
     margin-bottom: 5rem;
+
+    &--time {
+      font-size: 2rem;
+      color: white;
+    }
+
+    &--btnEnd {
+      background-color: transparent;
+      border: none;
+      color: red;
+    }
   }
 
   &__question {
