--- a/src/scss/settings/_variables.scss
+++ b/src/scss/settings/_variables.scss
@@ -6,5 +6,6 @@ $secondaryColor: #aece97;
 $teriaryColor: #4b7a8c;
 $surface: #9f9893;
 $error: #b3261e;
+$errorContainer: #F9DEDC;
 $containerColor: #9b6fbb;
 $font: 'Nunito', sans-serif;
