Created question details

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,3 +12,4 @@
 @import './elements/startGame';
 @import './elements/gamePlay';
 @import './elements/details';
+@import './elements/questionDetails';
