--- a/src/scss/elements/_categories.scss
+++ b/src/scss/elements/_categories.scss
@@ -44,6 +44,11 @@
         width: 10.625rem;
       }
 
+      span {
+        position: absolute;
+        color: white;
+      }
+
       img {
         height: 100%;
       }
