--- a/src/scss/elements/_mainPage.scss
+++ b/src/scss/elements/_mainPage.scss
@@ -12,7 +12,12 @@
   }
 
   &__latestGames {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
     &--title {
+      text-align: center;
       color: $primaryColor;
       font-size: 1.5rem;
     }
