--- a/src/scss/elements/_startGame.scss
+++ b/src/scss/elements/_startGame.scss
@@ -5,7 +5,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 5rem);
+  height: 100vh;
+  background-color: $teriaryColor;
 
   p {
     color: white;
