--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,7 @@
 
 @import './elements/base';
 @import './elements/header';
+@import './elements/footer';
 @import './elements/startPage';
 @import './elements/mainPage';
 @import './elements/categories';
